# Federated-Learning

./: fl_fed_avg_and_fpass.py  pyproject.toml  split_learning_mnist.py
Federated Learning/: fl_fed_avg_and_fpass.py  main.py
Split Learning/: split_learning_mnist.py  split_learning_mnist2.py  split_learning_mnist3.py  test_split.py
Split Learning/clients/: client_1_trained_model.pth  client_2_trained_model.pth  client_3_trained_model.pth
Split Learning/server/: server_trained_model.pth
flower_alternative/: client_app.py  server_app.py  task.py
