[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flower_alternative"
version = "1.0.0"
description = "Flower implementation for Federated Learning"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.14.0",
    "flwr-datasets[vision]>=0.3.0",
    "tensorflow>=2.9.1, != 2.11.1 ; (platform_machine == \"x86_64\" or platform_machine == \"aarch64\")",
    "tensorflow-macos>=2.9.1, != 2.11.1 ; sys_platform == \"darwin\" and platform_machine == \"arm64\"",
]
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "flower_alternative.server_app:app"
clientapp = "flower_alternative.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 6
local-epochs = 20
batch-size = 32
learning-rate = 0.0001
fraction-fit = 0.5
verbose = false

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
root-certificates = "./.cache/certificates/ca.crt"